# rote

./: Cargo.toml  build.rs  package.json
resources/: resources.rc
resources/icons/: PENCIL.LICENSE.md
src/: app.rs  buffer.rs  diff.rs  main.rs  shortcuts.rs
src-tauri/: Cargo.toml  tauri.conf.json
