[package]
name = "rote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
eframe = { version = "0.27.0", features = ["dark-light", "persistence"] }
egui = "0.21.0"
heck = "0.4.1"
image = "0.24.6"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
rfd = "0.11.3"
serde = { version = "1.0.158", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"
