[package]
edition = "2021"
name = "rote"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
eframe = { version = "0.27.2", features = ["persistence"] }
egui = "0.27.2"
heck = "0.5.0"
image = "0.25.1"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
rfd = "0.14.1"
serde = { version = "1.0.203", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
toml = "0.8.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"
