[package]
edition = "2021"
name = "rote"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.27", features = ["persistence"] }
egui = "0.27"
heck = "0.5"
image = "0.25"
once_cell = { version = "1.19", features = ["parking_lot"] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"
